--- a/accueil.html
+++ b/accueil.html
@@ -27,20 +27,29 @@
 			</br>
 			<table><td width = "65%" ><h3>Résumé</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse erat erat, cursus sit amet aliquet non, rutrum eu quam. Curabitur id viverra erat. Praesent fringilla, erat ut eleifend tincidunt, odio dui mollis mauris, vitae malesuada arcu sem non ante. Pellentesque vehicula justo vitae leo molestie, sit amet gravida felis rhoncus. Praesent eleifend augue diam, ac condimentum arcu sollicitudin eget. Aliquam sodales luctus bibendum. Integer eu ultrices nibh. Etiam pretium mattis elit, id cursus dui ultricies nec.
-			Praesent luctus consectetur odio sit amet porttitor. Nunc sollicitudin accumsan risus sed tristique. Fusce iaculis lectus quam, a molestie massa dapibus et. Curabitur quis metus tellus. Proin quam justo, hendrerit non sem non, gravida tempor lacus. In scelerisque augue eu urna congue vulputate. Vivamus at ante sed risus vulputate sodales. Donec auctor quam risus, vitae tempor odio efficitur nec. Ut placerat arcu a dignissim bibendum.
-			Mauris non metus elementum, elementum arcu nec, aliquet tellus. Sed euismod nisl a lorem tristique, eu sodales eros accumsan. Suspendisse purus nulla, ultrices eget nulla vitae, rhoncus varius lorem. Ut ac euismod arcu, sit amet lacinia lorem. Etiam commodo porttitor est vitae sagittis. Suspendisse aliquam commodo bibendum. Suspendisse auctor turpis sagittis, commodo elit in, cursus nisi. Ut porta malesuada iaculis. Donec lorem risus, cursus nec arcu vitae, aliquam porta lectus. Nam dignissim laoreet neque, quis posuere nunc tempor vitae. Aliquam a leo ac nunc interdum gravida sit amet consectetur ligula. Etiam ac nisi id erat congue varius. Donec convallis nisl id neque iaculis, at iaculis diam pharetra. Sed leo leo, pharetra vel fermentum sit amet, malesuada non tortor. Nunc a justo quis turpis rutrum luctus vitae non magna.
+			</p><p>Praesent luctus consectetur odio sit amet porttitor. Nunc sollicitudin accumsan risus sed tristique. Fusce iaculis lectus quam, a molestie massa dapibus et. Curabitur quis metus tellus. Proin quam justo, hendrerit non sem non, gravida tempor lacus. In scelerisque augue eu urna congue vulputate. Vivamus at ante sed risus vulputate sodales. Donec auctor quam risus, vitae tempor odio efficitur nec. Ut placerat arcu a dignissim bibendum.
+			</p><p>Mauris non metus elementum, elementum arcu nec, aliquet tellus. Sed euismod nisl a lorem tristique, eu sodales eros accumsan. Suspendisse purus nulla, ultrices eget nulla vitae, rhoncus varius lorem. Ut ac euismod arcu, sit amet lacinia lorem. Etiam commodo porttitor est vitae sagittis. Suspendisse aliquam commodo bibendum. Suspendisse auctor turpis sagittis, commodo elit in, cursus nisi. Ut porta malesuada iaculis. Donec lorem risus, cursus nec arcu vitae, aliquam porta lectus. Nam dignissim laoreet neque, quis posuere nunc tempor vitae. Aliquam a leo ac nunc interdum gravida sit amet consectetur ligula. Etiam ac nisi id erat congue varius. Donec convallis nisl id neque iaculis, at iaculis diam pharetra. Sed leo leo, pharetra vel fermentum sit amet, malesuada non tortor. Nunc a justo quis turpis rutrum luctus vitae non magna.
 			</p></td>
 
 			<td width = "10%"></td>
 
-			<td width = "25%" valign = "top">
-			<h3>Informations</h3>
-			<p>
-			<br><img class = "icone" src = "tel.png"> 06.66.66.66.66
-			<br><img class = "icone" src = "adresse.png"> 1 rue du potager 75000 Paris
-			<br><img class = "icone" src = "mail.png"> camille.navarro@edu.ece.fr
+			<td width = "25%">
 			
-			</p></td>
+			<h3>Centres d'intérêts</h3>
+			
+			<audio controls src = "bo.mp3"></audio>
+			<p>Séries, films
+			<br>Lecture, Ecriture
+			<br>Voyages
+			<br>Théâtre, danse
+			</p>
+			<h3>Informations</h3>
+			
+			<p><img class = "icone" src = "tel.png"> 06.66.66.66.66
+			<br><img class = "icone" src = "adresse.png"> 1 rue du potager 75000 Paris
+			<br><img class = "icone" src = "mail.png"> camille.navarro@edu.ece.fr</p>
+			
+			</td>
 		</table>
 		</main>
 		
