--- a/exp.html
+++ b/exp.html
@@ -10,7 +10,7 @@
 		<header>
 			<div class = "haut"><table><td><h1>Camille Navarro</h1>
 			<h2>Etudiante ingénieure</h2></td>
-			<td><img src = "id.jpg" width = "100" height = "100" ></td></table>
+			<td><img class = "photo" src = "id.jpg" ></td></table>
 			</div>
 			<nav>
 			<ul>
@@ -22,20 +22,30 @@
 			</nav>
 		</header>
 
+		<br>
 		<main>
-			<h3>Expériences</h3>
-			<ul>
-				<li>premiere</li>
-				<li>deuxieme</li>
-				<li>etc</li>
-			</ul>
-
+		<blockquote>
+			<table><td><h3>Expériences</h3>
+			<table>
+				<tr><td width = "100px" align = "right">DATE</td>
+				<td><p>Nom du poste <br> Résumé</p></td></tr>
+				<tr><td width = "100px" align = "right">DATE</td>
+				<td><p>Nom du poste <br> Résumé</p></td></tr>
+				<tr><td width = "100px" align = "right">DATE</td>
+				<td><p>Nom du poste <br> Résumé</p></td></tr>
+			</table></td>
+			<td>
 			<h3>Projets</h3>
-			<ul>
-				<li>premiere</li>
-				<li>deuxieme</li>
-				<li>etc</li>
-			</ul>
+			<table>
+				<tr><td width = "100px" align = "right">DATE</td>
+				<td><p>Nom du poste <br> Résumé</p></td></tr>
+				<tr><td width = "100px" align = "right">DATE</td>
+				<td><p>Nom du poste <br> Résumé</p></td></tr>
+				<tr><td width = "100px" align = "right">DATE</td>
+				<td><p>Nom du poste <br> Résumé</p></td></tr>
+			</table></td>
+			</table>
+		</blockquote>
 		</main>
 	</body>
 </html>
