--- a/compet.html
+++ b/compet.html
@@ -10,7 +10,7 @@
 		<header>
 			<div class = "haut"><table><td><h1>Camille Navarro</h1>
 			<h2>Etudiante ingénieure</h2></td>
-			<td><img src = "id.jpg" width = "100" height = "100" ></td></table>
+			<td><img class = "photo" src = "id.jpg" ></td></table>
 			</div>
 			<nav>
 			<ul>
@@ -22,21 +22,23 @@
 			</nav>
 		</header>
 
+		<br>
 		<main>
+		<blockquote>
 			<h3>Compétences</h3>
 			<h4>Informatique</h4>
-				<ul>
-					<li>premiere</li>
-					<li>deuxieme</li>
-					<li>etc</li>
-				</ul>
-
+				<div class = "competences">
+				premiere<br>
+				deuxieme<br>
+				etc
+				</div>
 			<h4>Langues</h4>
-				<ul>
-					<li>premiere</li>
-					<li>deuxieme</li>
-					<li>etc</li>
-				</ul>
+				<div class = "competences">
+				premiere<br>
+				deuxieme<br>
+				etc
+				</div>
+			</blockquote>
 		</main>
 	</body>
 </html>
