--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 		<header>
 			<div class = "haut"><table><td><h1>Camille Navarro</h1>
 			<h2>Etudiante ingénieure</h2></td>
-			<td><img src = "id.jpg" width = "100" height = "100" ></td></table>
+			<td><img class = "photo" src = "id.jpg" ></td></table>
 			</div>
 			<nav>
 			<ul>
@@ -22,7 +22,9 @@
 			</nav>
 		</header>
 
+		<br>
 		<main>
+			<h3>Formulaire de contact</h3><br>
 			<form method = "Post">
 				<table>
 					<tr><td>Nom</td>
@@ -35,6 +37,7 @@
 						<td><input type = "text"></td></tr>
 					<tr><td>Contenu</td>
 						<td><TEXTAREA cols="40" rows="5"></TEXTAREA></td></tr>
+					<tr><td></td><td><button>Envoyer</button></td></tr>
 				</table>
 			</form>
 		</main>
