--- a/accueil.html
+++ b/accueil.html
@@ -15,7 +15,7 @@
 			<nav>
 			<ul>
 				<li><a href = "accueil.html"><b>Accueil</b></a></li>
-				<li><a href = "exp.html">Expériences & Projets</a></li>
+				<li><a href = "exp.html">Expériences & Formations</a></li>
 				<li><a href = "compet.html">Compétences</a></li>
 				<li><a href = "contact.html">Contact</a></li>
 			</ul>
