--- a/compet.html
+++ b/compet.html
@@ -15,7 +15,7 @@
 			<nav>
 			<ul>
 				<li><a href = "accueil.html">Accueil</a></li>
-				<li><a href = "exp.html">Expériences & Projets</b></a></li>
+				<li><a href = "exp.html">Expériences & Formations</b></a></li>
 				<li><a href = "compet.html"><b>Compétences</b></a></li>
 				<li><a href = "contact.html">Contact</a></li>
 			</ul>
@@ -28,15 +28,17 @@
 			<h3>Compétences</h3>
 			<h4>Informatique</h4>
 				<div class = "competences">
-				premiere<br>
-				deuxieme<br>
-				etc
+				• Windows, Linux, Mac<br>
+				• Code::Blocks, Matlab, Arduino, ModelSim, NetBeans, Atollic True Studio<br>
+				• ISIS, Pspice Schematics, Cisco Packet Tracer, Unity, SolidWorks<br>
+				• C, C++, Java, VHDL, Verilog, PHP, HTML, CSS, JavaScript
 				</div>
 			<h4>Langues</h4>
 				<div class = "competences">
-				premiere<br>
-				deuxieme<br>
-				etc
+				• Anglais <br>
+				• Espagnol<br>
+				• Japonais<br>
+				• Coréen
 				</div>
 			</blockquote>
 		</main>
