--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 			<nav>
 			<ul>
 				<li><a href = "accueil.html">Accueil</a></li>
-				<li><a href = "exp.html">Expériences & Projets</a></li>
+				<li><a href = "exp.html">Expériences & Formations</a></li>
 				<li><a href = "compet.html">Compétences</a></li>
 				<li><a href = "contact.html"><b>Contact</b></a></li>
 			</ul>
