--- a/compet.html
+++ b/compet.html
@@ -14,12 +14,12 @@
 			</div>
 			<nav>
 			<ul>
-				<li><a href = "accueil.html">Accueil</a></li>
+				<li><a href = "index.html">Accueil</a></li>
 				<li><a href = "exp.html">Expériences & Formations</b></a></li>
 				<li><a href = "compet.html"><b>Compétences</b></a></li>
 				<li><a href = "contact.html">Contact</a></li>
 			</ul>
-			</nav>
+			</nav><br>
 		</header>
 
 		<br>
