--- a/contact.html
+++ b/contact.html
@@ -14,18 +14,18 @@
 			</div>
 			<nav>
 			<ul>
-				<li><a href = "accueil.html">Accueil</a></li>
+				<li><a href = "index.html">Accueil</a></li>
 				<li><a href = "exp.html">Expériences & Formations</a></li>
 				<li><a href = "compet.html">Compétences</a></li>
 				<li><a href = "contact.html"><b>Contact</b></a></li>
 			</ul>
-			</nav>
+			</nav><br>
 		</header>
 
 		<br>
 		<main>
-			<h3>Formulaire de contact</h3><br>
-			<form method = "Post">
+			<table><td><h3>Formulaire de contact</h3><br>
+				<form method = "Post">
 				<table>
 					<tr><td>Nom</td>
 						<td><input type = "text"></td></tr>
@@ -39,7 +39,11 @@
 						<td><TEXTAREA cols="40" rows="5"></TEXTAREA></td></tr>
 					<tr><td></td><td><button>Envoyer</button></td></tr>
 				</table>
-			</form>
+				</form>
+			</td><td>
+			<img class = "animation" src = "courrier.jpg"></td>
+			</table>
+			
 		</main>
 	</body>
 </html>
