--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 			</div>
 			<nav>
 			<ul>
-				<li><a href = "accueil.html"><b>Accueil</b></a></li>
+				<li><a href = "index.html"><b>Accueil</b></a></li>
 				<li><a href = "exp.html">Expériences & Formations</a></li>
 				<li><a href = "compet.html">Compétences</a></li>
 				<li><a href = "contact.html">Contact</a></li>
 			</ul>
-			</nav>
+			</nav><br>
 		</header>
 		
 		
