--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Camille Navarro</title>
-		<link href="styles/style.css" rel="stylesheet" type="text/css">
+		<link href="style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<header>
