--- a/compet.html
+++ b/compet.html
@@ -14,10 +14,10 @@
 			</div>
 			<nav>
 			<ul>
-				<li><a href = "index.html">Accueil</a></li>
-				<li><a href = "exp.html">Expériences & Formations</b></a></li>
-				<li><a href = "compet.html"><b>Compétences</b></a></li>
-				<li><a href = "contact.html">Contact</a></li>
+				<li class = "menu"><a href = "index.html">Accueil</a></li>
+				<li class = "menu"><a href = "exp.html">Expériences & Formations</b></a></li>
+				<li class = "menu"><a href = "compet.html"><b>Compétences</b></a></li>
+				<li class = "menu"><a href = "contact.html">Contact</a></li>
 			</ul>
 			</nav><br>
 		</header>
@@ -27,19 +27,19 @@
 		<blockquote>
 			<h3>Compétences</h3>
 			<h4>Informatique</h4>
-				<div class = "competences">
-				• Windows, Linux, Mac<br>
-				• Code::Blocks, Matlab, Arduino, ModelSim, NetBeans, Atollic True Studio<br>
-				• ISIS, Pspice Schematics, Cisco Packet Tracer, Unity, SolidWorks<br>
-				• C, C++, Java, VHDL, Verilog, PHP, HTML, CSS, JavaScript
-				</div>
+			<ul>
+				<li>Windows, Linux, Mac</li>
+				<li>Code::Blocks, Matlab, Arduino, ModelSim, NetBeans, Atollic True Studio</li>
+				<li>ISIS, Pspice Schematics, Cisco Packet Tracer, Unity, SolidWorks</li>
+				<li>C, C++, Java, VHDL, Verilog, PHP, HTML, CSS, JavaScript</li>
+			</ul>
 			<h4>Langues</h4>
-				<div class = "competences">
-				• Anglais <br>
-				• Espagnol<br>
-				• Japonais<br>
-				• Coréen
-				</div>
+			<ul>
+				<li>Anglais</li>
+				<li>Espagnol</li>
+				<li>Japonais</li>
+				<li>Coréen</li>
+			</ul>
 			</blockquote>
 		</main>
 	</body>
