--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
 			</div>
 			<nav>
 			<ul>
-				<li><a href = "index.html">Accueil</a></li>
-				<li><a href = "exp.html">Expériences & Formations</a></li>
-				<li><a href = "compet.html">Compétences</a></li>
-				<li><a href = "contact.html"><b>Contact</b></a></li>
+				<li class = "menu"><a href = "index.html">Accueil</a></li>
+				<li class = "menu"><a href = "exp.html">Expériences & Formations</a></li>
+				<li class = "menu"><a href = "compet.html">Compétences</a></li>
+				<li class = "menu"><a href = "contact.html"><b>Contact</b></a></li>
 			</ul>
 			</nav><br>
 		</header>
