--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 			</div>
 			<nav>
 			<ul>
-				<li><a href = "index.html"><b>Accueil</b></a></li>
-				<li><a href = "exp.html">Expériences & Formations</a></li>
-				<li><a href = "compet.html">Compétences</a></li>
-				<li><a href = "contact.html">Contact</a></li>
+				<li class = "menu"><a href = "index.html"><b>Accueil</b></a></li>
+				<li class = "menu"><a href = "exp.html">Expériences & Formations</a></li>
+				<li class = "menu"><a href = "compet.html">Compétences</a></li>
+				<li class = "menu"><a href = "contact.html">Contact</a></li>
 			</ul>
 			</nav><br>
 		</header>
@@ -38,16 +38,18 @@
 			<h3>Centres d'intérêts</h3>
 			
 			<audio controls src = "bo.mp3"></audio>
-			<p>Séries, films
-			<br>Lecture, Ecriture
-			<br>Voyages
-			<br>Théâtre, danse
-			</p>
+			<ul>
+				<li>Séries, films</li>
+				<li>Lecture, Ecriture</li>
+				<li>Voyages</li>
+				<li>Théâtre, danse</li>
+			</ul>
+			
 			<h3>Informations</h3>
 			
-			<p><img class = "icone" src = "tel.png"> 06.66.66.66.66
+			<img class = "icone" src = "tel.png"> 06.66.66.66.66
 			<br><img class = "icone" src = "adresse.png"> 1 rue du potager 75000 Paris
-			<br><img class = "icone" src = "mail.png"> camille.navarro@edu.ece.fr</p>
+			<br><img class = "icone" src = "mail.png"> camille.navarro@edu.ece.fr
 			
 			</td>
 		</table>
