--- a/exp.html
+++ b/exp.html
@@ -14,10 +14,10 @@
 			</div>
 			<nav>
 			<ul>
-				<li><a href = "index.html">Accueil</a></li>
-				<li><a href = "exp.html"><b>Expériences & Formations</b></a></li>
-				<li><a href = "compet.html">Compétences</a></li>
-				<li><a href = "contact.html">Contact</a></li>
+				<li class = "menu"><a href = "index.html">Accueil</a></li>
+				<li class = "menu"><a href = "exp.html"><b>Expériences & Formations</b></a></li>
+				<li class = "menu"><a href = "compet.html">Compétences</a></li>
+				<li class = "menu"><a href = "contact.html">Contact</a></li>
 			</ul>
 			</nav><br>
 		</header>
@@ -27,35 +27,47 @@
 		<blockquote>
 			<table><td width = "45%"><h3>Formations</h3>
 			<table>
-				<tr><td width = "130px" align = "right"><b>Février 2016 – présent</b></td>
-				<td><p><b>ECE Paris </b><br> <i>Ecole Centrale d’Electronique – Ecole d’ingénieurs </i><br>
+				<tr><div class="cache" style="background-image: url('ece.jpg');">
+				<div class="description"><p><b>Février 2016 – présent<br>ECE Paris </b><br> <i>Ecole Centrale d’Electronique – Ecole d’ingénieurs </i><br>
 						Majeure Objets Connectés, Réseaux et Services (OCRES) <br> Promotion 2020
-						</p></td></tr>
-				<tr><td width = "130px" align = "right"><b>Septembre – décembre 2017</b></td>
-				<td><p><b>Kyungpook National University </b><br> <i>Daegu, Corée du Sud</i><br>
+						</p>
+				</div></div></tr>
+				
+				<tr><div class="cache" style="background-image: url('knu.png');">
+				<div class="description"><p><b>Septembre – décembre 2017<br>Kyungpook National University </b><br> <i>Daegu, Corée du Sud</i><br>
 						Semestre d’échange étudiant avec l’ECE Paris
-						</p></td></tr>
-				<tr><td width = "130px" align = "right"><b>Septembre 2014 – Janvier 2016</b></td>
-				<td><p><b>CPGE ECS (Economique et commerciale option scientifique)</b> <br> <i>Lycée Jeanne d’Albret, Saint-Germain-en-Laye</i> <br>
+						</p>
+				</div></div></tr>
+				<tr><div class="cache" style="background-image: url('jalbret.jpg');">
+				<div class="description">
+				<p><b>Septembre 2014 – Janvier 2016<br>CPGE ECS (Economique et commerciale option scientifique)</b> <br> <i>Lycée Jeanne d’Albret, Saint-Germain-en-Laye</i> <br>
 						Choix personnel de réorientation en cycle ingénieur
-						</p></td></tr>
+						</p>
+				</div></div></tr>
 			</table></td>
+
 			<td width = "10%"></td>
+
 			<td width = "45%">
 			<h3>Expériences</h3>
 			<table>
-				<tr><td width = "130px" align = "right"><b>Juillet – août 2018</b></td>
-				<td><p><b>CDD à l’Association Française des Fundraisers</b> <br> <i>75009 Paris </i><br>
+				<tr><div class="cache" style="background-image: url('aff.jpg');">
+				<div class="description">
+				<p><b>Juillet – août 2018<br>CDD à l’Association Française des Fundraisers</b> <br> <i>75009 Paris </i><br>
 						Travail administratif de gestion d’une base de données
-						</p></td></tr>
-				<tr><td width = "130px" align = "right"><b>Janvier – Février 2018</b></td>
-				<td><p><b>Stage au Laboratoire Navier</b> <br> <i>77420 Champs-sur-Marne</i><br>
+						</p>
+				</div></div></tr>
+				<tr><div class="cache" style="background-image: url('navier.png');">
+				<div class="description">
+				<p><b>Janvier – Février 2018<br>Stage au Laboratoire Navier</b> <br> <i>77420 Champs-sur-Marne</i><br>
 						Assistante en électronique, étude et amélioration d’un dispositif destiné aux physiciens du laboratoire
-						</p></td></tr>
-				<tr><td width = "130px" align = "right"><b>Janvier – Février 2017</b></td>
-				<td><p><b>Stage à Ingenico</b> <br><i> 75015 Paris</i> <br>
+						</p>
+				</div></div></tr>
+				<tr><div class="cache" style="background-image: url('ingenico.jpg');">
+				<div class="description"><p><b>Janvier – Février 2017<br>Stage à Ingenico</b> <br><i> 75015 Paris</i> <br>
 						Stagiaire en informatique R&D
-						</p></td></tr>
+						</p>
+				</div></div></tr>
 			</table></td>
 			</table>
 		</blockquote>
